
Changelog
=========

2019.1.4 (unreleased)
---------------------

- Fix creation of scaneingang dossier in the scan-in endpoint. [phgross]


2019.1.3 (2019-03-25)
---------------------

- Fix performance issue with search root exclusion in tabbed view listings. [lgraf]
- Fix upgrade step that reindexes object_provides for PDFs so it performs better. [lgraf]


2019.1.2 (2019-03-07)
---------------------

- Make sure task and journal PDFs object_provides index is up to date after resolving a dossier. [njohner]
- Readd Office template files into Office Connector editable MIME types. [Rotonen]
- Make sure end date is reindexed when resolving/reactivating a dossier. [njohner]
- Readd Office macro files into Office Connector editable MIME types. [Rotonen]
- Complete French translations of repository in examplecontent. [andresoberhaensli]


2019.1.1 (2019-02-26)
---------------------

- Hide system-actor in the my-notification listing. [phgross]
- Add `*.vsdx` to the base list of OC-editable types. [lgraf]
- Fix handling of valid terms in repository tree xlsx file. [njohner]
- Handle translations for block_inheritance in repository xlsx file. [njohner]
- Set default language for dossier overdue activity. [njohner]
- Fix display issue for livesearch rsults. [deiferni]


2019.1.0 (2019-02-19)
---------------------

- Lock dossier subtree during resolve transition. [lgraf]
- Prevent dossiers from being resolved twice. [lgraf]
- Fix subject-filter for personal overview. [elioschmutz]
- Handle empty responsible field when assigning task. [njohner]
- Add date string localization for sablon data. [njohner]
- Fixed the REST API scan-in end point for organization units with non-ASCII in their titles. [Rotonen]
- Set default language for task reminders. [njohner]
- Add a three-tier mechanism for mapping MIME types to Office Connector. [Rotonen]
- Suppress deletion events when filtering objects from copied subtrees. [lgraf]