@@ -7,12 +7,8 @@ from opengever.base.solr import OGSolrDocument
 from opengever.tabbedview.filtered_source import FilteredTableSourceMixin
 from opengever.tabbedview.interfaces import IGeverCatalogTableSourceConfig
 from plone.registry.interfaces import IRegistry
-from plone.uuid.interfaces import IUUID
-from Products.CMFCore.interfaces import IContentish
 from zope.component import adapter
 from zope.component import getUtility
-from zope.component import queryAdapter
-from zope.globalrequest import getRequest
 from zope.interface import implementer
 from zope.interface import Interface
 
@@ -34,28 +30,14 @@ class GeverCatalogTableSource(FilteredTableSourceMixin, CatalogTableSource):
 
         return super(GeverCatalogTableSource, self).search_results(query)
 
-    def _context_from_request(self):
-        """Attempt to find the context from the request.
-
-        This is needed for excluding the search root below, and should
-        be considered 'good enough' for here, but not used anywhere else.
-        """
-        request = getRequest()
-        for item in request.get('PARENTS', []):
-            if IContentish.providedBy(item):
-                return item
-
-        return None
-
     def exclude_searchroot_from_query(self, query):
         """Override ftw.table CatalogTableSource's implementation.
 
         That implementation has serious performance issues for containers
         with many immediate children.
 
-        In GEVER, we have a newer Products.ZCatalog version and monkey patch
-        support for the 'not' operator onto the UIDIndex's query options, so
-        we can use a more efficient approach here.
+        In GEVER, we patch ExtendedPathIndex to allow us to efficiently exclude
+        the search root with a query option.
         """
         if not getattr(self.config, 'exclude_searchroot', True):
             return query
@@ -72,11 +54,11 @@ class GeverCatalogTableSource(FilteredTableSourceMixin, CatalogTableSource):
                 #    do (excludes searchroot), nothing to do for us
                 return query
 
-        if 'UID' not in query:
-            context = self._context_from_request()
-            uuid = queryAdapter(context, IUUID)
-            if uuid:
-                query['UID'] = {'not': uuid}
+            else:
+                path_query['exclude_root'] = 1
+        else:
+            path_query = {'query': path_query, 'exclude_root': 1}
+        query['path'] = path_query
         return query
 
     def solr_results(self, query):
